# hat

./: CMakeLists.txt  CMakeListsPrivate.txt  platformio.ini  protocoll.yml
include/: TimeLib.h  com.h  complementary_filter.h  flash.h  matrix.h  messages.h  mpu6050.h  rotate.h  uartHost.h
lib/Filter/: CMakeLists.txt
lib/Filter/examples/: Example.cpp
lib/Filter/include/: Filter.h  MultiChannelFilter.h
lib/Filter/src/: Filter.cpp  MultiChannelFilter.cpp
src/: TimeLib.cpp  com.cpp  complementary_filter.cpp  eksempelCode.cpp  flash.cpp  main.cpp  matrix.cpp  mpu6050.cpp  rotate.cpp  uartHost.cpp
